<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_background_signin"
    android:fitsSystemWindows="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/img_b_g_s_i_g_n_i_n_2" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="22dp"
                android:src="@drawable/icon_back_arrow" />

            <TextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/traveller_login_margin_top"
                android:gravity="center_horizontal"
                android:text="@string/contact_us"
                android:textAllCaps="true"
                android:textColor="@color/trimble_white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_us"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/traveller_login_email_input_bg"
                android:drawableLeft="@mipmap/img_icon_email"
                android:drawablePadding="17dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_email_address_required"
                android:paddingBottom="22dp"
                android:paddingEnd="0dp"
                android:paddingStart="15dp"
                android:paddingTop="22dp"
                android:textColor="@color/trimble_white"
                android:textColorHint="@color/traveller_login_hint_color"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/user_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/contact_us_user_message_height"
                android:layout_below="@+id/email_input"
                android:background="@color/traveller_login_email_input_bg"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="4dp"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:textColor="@color/trimble_white"
                android:hint="@string/what_would_you_like_to_tell_us"
                android:textColorHint="@color/traveller_login_hint_color"
                android:gravity="top"
                />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/send_us_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/login_color"
        android:gravity="center"
        android:text="@string/send"
        android:textAllCaps="true"
        android:textColor="@color/trimble_white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>